# pubmed_rs

./: Cargo.toml  README.md
src/: client.rs  helpers.rs  lib.rs
src/types/: affiliation_info.rs  article.rs  article_abstract.rs  article_id.rs  author.rs  chemical.rs  elocation_id.rs  grant.rs  identifier.rs  journal.rs  journal_issue.rs  keyword.rs  medline_citation.rs  medline_journal_info.rs  mesh.rs  mod.rs  other_id.rs  pagination.rs  publication_type.rs  pubmed_article.rs  pubmed_data.rs  pubmed_date.rs  reference.rs
