[package]
name = "pubmed"
version = "0.1.2"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"
description="A wrapper around the PubMed API"
repository="https://github.com/magnusmanske/pubmed"
keywords=["pubmed","api","publications","papers","science"]
categories=["api-bindings","science"]
license="MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
roxmltree = "*" #"0.6.0"
rand = "*"
