[package]
name = "pubmed"
version = "0.1.4"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
description = "A wrapper around the PubMed API"
repository = "https://github.com/magnusmanske/pubmed"
keywords = ["pubmed", "api", "publications", "papers", "science"]
categories = ["api-bindings", "science"]
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.12", features = ["blocking", "json"] }
roxmltree = "^0.20"
rand = "^0.9"
tokio = { version = "^1", features = ["full"] }
