[package]
name = "pubmed"
version = "0.2.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
description = "A wrapper around the PubMed API"
repository = "https://github.com/magnusmanske/pubmed"
keywords = ["pubmed", "api", "publications", "papers", "science"]
categories = ["api-bindings", "science"]
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.13", features = ["json"] }
roxmltree = "^0.21"
tokio = { version = "^1", features = ["full"] }
rand = "^0.10"
